[DTSSTCI-1422] update DraftOrderFooter and tests